Added TOC to index
Created outline/TOC of what discrete math covers in the index.html page.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,11 @@
     "html.hover.references": false,
     "html.suggest.html5": false,
     "html.hover.documentation": false,
-    "editor.autoClosingBrackets": false,
+    "editor.autoClosingBrackets": "never",
     "editor.suggestOnTriggerCharacters": false,
     "json.schemas": [
         
-    ]
+    ],
+    "editor.autoClosingQuotes": "never",
+    "editor.autoSurround": "never"
 }
